Post request for /cart/add

--- a/ecommerce-backend/src/main/resources/application.properties
+++ b/ecommerce-backend/src/main/resources/application.properties
@@ -10,3 +10,5 @@ encryption.salt.rounds=10
 jwt.algorithm.key=SuperSecureSecretKey
 jwt.issuer=eCommerce
 jwt.expiryInSeconds=604800
+
+spring.session.store-type=none
