Change favicon and attempt to configure requests for adding a product to cart and then getting cart items (mission failed, still not fixed)

--- a/ecommerce-backend/src/main/resources/application.properties
+++ b/ecommerce-backend/src/main/resources/application.properties
@@ -11,4 +11,7 @@ jwt.algorithm.key=SuperSecureSecretKey
 jwt.issuer=eCommerce
 jwt.expiryInSeconds=604800
 
+server.servlet.session.cookie.same-site=None
+server.servlet.session.cookie.secure=true
+
 spring.session.store-type=none
